--- a/.lh/.gitignore.json
+++ b/.lh/.gitignore.json
@@ -3,11 +3,15 @@
     "activeCommit": 0,
     "commits": [
         {
-            "activePatchIndex": 0,
+            "activePatchIndex": 1,
             "patches": [
                 {
                     "date": 1750724323458,
                     "content": "Index: \n===================================================================\n--- \n+++ \n"
+                },
+                {
+                    "date": 1751704113492,
+                    "content": "Index: \n===================================================================\n--- \n+++ \n@@ -1,27 +1,29 @@\n-# Logs\n-logs\n-*.log\n-npm-debug.log*\n-yarn-debug.log*\n-yarn-error.log*\n-pnpm-debug.log*\n-lerna-debug.log*\n-\n-node_modules\n-dist\n-dist-ssr\n-*.local\n-\n-# Editor directories and files\n-.vscode/*\n-!.vscode/extensions.json\n-.idea\n-.DS_Store\n-*.suo\n-*.ntvs*\n-*.njsproj\n-*.sln\n-*.sw?\n-# VS Code history and temporary folders\n-.history/\n-.lh/\n+# Logs\r\n+logs\r\n+*.log\r\n+npm-debug.log*\r\n+yarn-debug.log*\r\n+yarn-error.log*\r\n+pnpm-debug.log*\r\n+lerna-debug.log*\r\n+\r\n+node_modules\r\n+dist\r\n+dist-ssr\r\n+*.local\r\n+\r\n+# Editor directories and files\r\n+.vscode/*\r\n+!.vscode/extensions.json\r\n+.idea\r\n+.DS_Store\r\n+*.suo\r\n+*.ntvs*\r\n+*.njsproj\r\n+*.sln\r\n+*.sw?\r\n+\r\n+# Ignore .env anywhere\r\n+*.env\r\n+.env\r\n+\r\n"
                 }
             ],
             "date": 1750724323458,
