--- a/.github/workflows/main_trustasitter-api.yml
+++ b/.github/workflows/main_trustasitter-api.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - trustasitter-api
 
 on:
@@ -25,20 +22,21 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd Trustasitter-backend
           npm install
           npm run build --if-present
           npm run test --if-present
-        working-directory: Trustasitter-backend
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip .
-        working-directory: Trustasitter-backend
+        run: |
+          cd Trustasitter-backend
+          zip -r ../release.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: Trustasitter-backend/release.zip
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
