--- a/.github/workflows/main_trustasitter-api.yml
+++ b/.github/workflows/main_trustasitter-api.yml
@@ -22,14 +22,14 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd Trustasitter-backend
+          cd trustaSitter-backend
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
         run: |
-          cd Trustasitter-backend
+          cd trustaSitter-backend
           zip -r ../release.zip .
 
       - name: Upload artifact for deployment job
