--- a/.github/workflows/main_trustasitter-api.yml
+++ b/.github/workflows/main_trustasitter-api.yml
@@ -19,21 +19,18 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-      
-      - name: List files
-        run: ls -R
-      
+
       - name: npm install, build, and test
         run: |
-          cd trustaSitter-backend
+          cd TrustaSitter/TrustaSitter-backend
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
         run: |
-          cd trustaSitter-backend
-          zip -r ../release.zip .
+          cd TrustaSitter/TrustaSitter-backend
+          zip -r ../../release.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
