--- a/.github/workflows/main_trustasitter-api.yml
+++ b/.github/workflows/main_trustasitter-api.yml
@@ -19,6 +19,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
+      - name: List root directory
+        run: ls -R
+
 
       - name: npm install, build, and test
         run: |
