--- a/.github/workflows/main_trustasitter-api.yml
+++ b/.github/workflows/main_trustasitter-api.yml
@@ -15,25 +15,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: List root directory (for debug)
+        run: ls -R
+
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
-      - name: List root directory
-        run: ls -R
-
 
       - name: npm install, build, and test
         run: |
-          cd TrustaSitter/TrustaSitter-backend
+          cd TrustaSitter-backend
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
         run: |
-          cd TrustaSitter/TrustaSitter-backend
-          zip -r ../../release.zip .
+          cd TrustaSitter-backend
+          zip -r ../release.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -44,7 +44,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+
     permissions:
       id-token: write
       contents: read
