--- a/.github/workflows/main_trustasitter-api.yml
+++ b/.github/workflows/main_trustasitter-api.yml
@@ -1,3 +1,6 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy Node.js app to Azure Web App - trustasitter-api
 
 on:
@@ -10,13 +13,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: List root directory (for debug)
-        run: ls -R
 
       - name: Set up Node.js version
         uses: actions/setup-node@v3
@@ -25,15 +25,12 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd TrustaSitter-backend
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: |
-          cd TrustaSitter-backend
-          zip -r ../release.zip .
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -44,10 +41,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-
+    
     permissions:
-      id-token: write
-      contents: read
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -57,18 +54,19 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5A6A433DD8A5413CB5EB239832684CBB }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_FE42723437F2441294ABED589DB69583 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E33BAABEBE0F4672B59C24164AF8F51D }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_0EBE212BAE124287BFC81130E2CA9240 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_5CE61E5DAF0241F8B258B9B198F45785 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2F22EED8B3F1463E9527B112232346DE }}
 
-      - name: Deploy to Azure Web App
+      - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'trustasitter-api'
           slot-name: 'Production'
           package: .
+          
