--- a/.github/workflows/main_trustasitter-api.yml
+++ b/.github/workflows/main_trustasitter-api.yml
@@ -25,12 +25,15 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd trustaSitter-backend
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd trustaSitter-backend
+          zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
