--- a/.github/workflows/main_trustasitter-api.yml
+++ b/.github/workflows/main_trustasitter-api.yml
@@ -18,6 +18,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Debug - List directories
+        run: |
+          pwd
+          ls -la
+          echo "Checking if TrustaSitter-backend exists:"
+          ls -la TrustaSitter-backend || echo "Directory not found"
+
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
@@ -25,14 +32,14 @@ jobs:
 
       - name: npm install, build, and test
         run: |
-          cd trustaSitter-backend
+          cd TrustaSitter-backend
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
         run: |
-          cd trustaSitter-backend
+          cd TrustaSitter-backend
           zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
