--- a/.github/workflows/main_trustasitter-api.yml
+++ b/.github/workflows/main_trustasitter-api.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: Prepare backend for deployment
         run: |
           echo "Current directory: $(pwd)"
           echo "Listing contents:"
@@ -43,23 +43,16 @@ jobs:
           echo "Running npm install..."
           npm install
           echo "npm install completed"
-
-      - name: Zip artifact for deployment
-        run: |
-          echo "Creating zip from TrustaSitter-backend..."
-          cd TrustaSitter-backend
-          echo "Current directory: $(pwd)"
-          echo "Files to zip:"
-          ls -la
-          zip -r ../../release.zip ./*
+          echo "Creating zip file..."
+          zip -r ../../backend.zip ./*
           echo "Zip created successfully"
-          ls -la ../../release.zip
+          ls -la ../../backend.zip
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: release.zip
+          path: backend.zip
 
   deploy:
     runs-on: ubuntu-latest
