--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -22,25 +22,25 @@ jobs:
       - name: Clean install state
         run: |
           rm -rf node_modules package-lock.json
-        working-directory: ./TrustaSitter-backend
+        working-directory: ./trustasitter-backend
 
       - name: Install dependencies
         run: npm install
-        working-directory: ./TrustaSitter-backend
+        working-directory: ./trustasitter-backend
 
       - name: Run build (if any)
         run: npm run build
-        working-directory: ./TrustaSitter-backend
+        working-directory: ./trustasitter-backend
         continue-on-error: true
 
       - name: Run tests (if any)
         run: npm test
-        working-directory: ./TrustaSitter-backend
+        working-directory: ./trustasitter-backend
         continue-on-error: true
 
       - name: Start server
         run: npm start &
-        working-directory: ./TrustaSitter-backend
+        working-directory: ./trustasitter-backend
 
       - name: Wait for server to respond
         run: sleep 5
