--- a/.github/workflows/main_trustasitter-api.yml
+++ b/.github/workflows/main_trustasitter-api.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -57,20 +57,21 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write # This is required for requesting the JWT
+      contents: read # This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
+          path: . # Baixa na raiz para simplificar
 
       - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
+        run: unzip backend.zip
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -85,4 +86,3 @@ jobs:
           app-name: 'trustasitter-api'
           slot-name: 'Production'
           package: .
-          
