fix: correct zip file path in backend workflow

--- a/.github/workflows/main_trustasitter-api.yml
+++ b/.github/workflows/main_trustasitter-api.yml
@@ -44,9 +44,9 @@ jobs:
           npm install
           echo "npm install completed"
           echo "Creating zip file..."
-          zip -r ../../backend.zip ./*
+          zip -r ../backend.zip ./*
           echo "Zip created successfully"
-          ls -la ../../backend.zip
+          ls -la ../backend.zip
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
