*Added bat startup files for backend and frontend *Added Google Maps functionality. *The registration interface has added location capability and supports selection on the map *The search interface has added the ability to display nearby Baby Sitters *Support Baby Sitter sorting by distance

--- a/package.json
+++ b/package.json
@@ -14,7 +14,16 @@
   "devDependencies": {
     "concurrently": "^8.2.2"
   },
-  "keywords": ["babysitter", "booking", "react", "nodejs", "postgresql"],
+  "keywords": [
+    "babysitter",
+    "booking",
+    "react",
+    "nodejs",
+    "postgresql"
+  ],
   "author": "Bruno Henrique da Silva",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@react-google-maps/api": "^2.20.7"
+  }
 }
