--- a/trustasitter-backend/package.json
+++ b/trustasitter-backend/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.5",
-    "pg": "^8.16.2"
+    "pg": "^8.16.2",
+    "socket.io": "^4.8.1"
   }
 }
