--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ dist-ssr
 # Ignore VSCode history folders
 .history/
 .lh/
+/trustasitter-backend/install/privkey.pem
+/trustasitter-backend/install/fullchain.pem
